styles/style.css
/* ... */
.list {
	position: absolute;
	top: calc(10ch);
	left: 0;
	z-index: 999;
	clip-path: polygon(
		50% 0,
		63% 15%,
		100% 15%,
		100% 100%,
		0 100%,
		0 15%,
		37% 15%
	);
	height: max-content;
	width: 100%;
	padding: 3em 0.5em 0.5em 0.5em;
	background-color: white;
	color: var(--color-red);
	font-size: 0.8rem;
	text-align: left;
	list-style-type: none;
	display: none;
	border-radius: 1em;
}

.sign-up-button {
	padding: 0.5em;
	margin: 2em auto;
	transition: transform 300ms ease-in-out;
	cursor: pointer;
	min-width: fit-content;
	width: 20%;
}
.sign-up-button:hover,
.sign-up-button:focus {
	outline: none;
	transform: scale(1.1);
	filter: brightness(120%);
}

.fa-sign-in-alt {
	font-size: 1.5rem;
	color: var(--primary-color);
}

/* -------------------
   styling statstracker page
   ------------------- */

/* ------------------
    2. styling of the choose your fifa bar 
    -------------------*/
.fifa-bar {
	width: 100%;
	height: 5vh;
	background: #640305;
	position: fixed;
	z-index: 500;
	top: 0;
	transition: all 300ms ease-out;
}
.fifa-bar.show {
	top: 50px;
}
.fifa-bar.show-immediately {
	top: 50px;
	transition: none !important;
}

.fifa-version-form {
	display: flex;
	justify-content: space-around;
	align-items: center;
	color: var(--secondary-color);
	font-size: 1.5rem;
}

input[type="radio"] + label {
	padding: 0 0.5em;
}

input[type="radio"]:checked + label,
input[type="radio"]:hover + label {
	background: #380102;
}

/* ------------------
    3. styling of sidebar 
    -------------------*/
.sidebar {
	height: 100vh;
	min-width: 82px;
	padding-inline: 0.5em;
	padding-top: 50px;
	width: 15vw;
	position: fixed;
	z-index: 700;
	left: -15vw;
	top: 0;
	background: var(--primary-color);
	color: var(--secondary-color);
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	transition: left 300ms ease-out;
}

.sidebar.show {
	left: 0;
}
.sidebar.show-immediately {
	left: 0;
	transition: none !important;
}

.select-team-form {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}
label[for="team-name"] {
	font-weight: var(--montserrat-bold);
	font-size: 1.2rem;
	margin-bottom: 1em;
}
.teams-container {
	overflow-y: scroll;
	max-height: 30vh;
	scrollbar-width: none;
}

.select-team-form > * {
	padding: 0 0.5em;
}
.select-team-form label {
	margin-bottom: 1em;
	display: inline-block;
	min-width: 50%;
	width: max-content;
	max-width: 75%;
}
.select-team-form input:checked + label,
.select-team-form label:hover[for] {
	background-color: #020341;
	font-weight: var(--montserrat-bold);
}
.select-team-form .remove-team-btn {
	display: block;
	border: none;
	background: transparent;
	float: right;
}
.remove-team-btn .fa-times-circle {
	color: var(--color-red);
	cursor: pointer;
	font-size: 1.1rem;
}

.sidebar .sidebar--title {
	font-size: 1.5rem;
	font-weight: var(--montserrat-bold);
	display: block;
	margin-bottom: 0.5em;
	width: 100% !important;
}
.sidebar input[name="team-name"] {
	width: 90%;
	border-radius: 10vw;
	margin-bottom: 1.5em;
}

.add-team-btn {
	padding: 0.25em;
	margin-bottom: 1em;
	font-size: 1.2rem;
	width: 90%;
	transition: var(--btn-transition);
	font-weight: var(--comfortaa-bold);
}

/* animate the main content of page depending on if the sidebar is visible  */
.sidebar.show + main {
	animation: toLeft 300ms ease-out forwards;
}
.sidebar.show-immediately + main {
	margin-left: 16vw;
	animation: unset !important;
}
.sidebar:not(.show):not(.show-immediately) + main {
	animation: toRight 300ms ease-out forwards;
}

/* ===========================
  styling of main content statstracker page
  ========================================= */

/*=============================================
  styling of hero/ fifa titles section
  ====================================
 */
.hero {
	position: relative;
	min-height: 20vh;
	margin: calc(50px + 5vh + 1em) 0 1em 0;
	box-shadow: -1px 8px 5px -1px #222;
	display: flex;
	align-items: center;
	width: 100%;
}
.tacker-title {
	font-size: 5rem;
	height: 5rem;
	line-height: 0.9;
	margin-left: 0.5em;
}
.fifa-title {
	font-size: 1rem;
	font-weight: var(--montserrat-normal);
	font-variant: small-caps;
	display: block;
	position: absolute;
	right: 3vw;
	width: max-content;
	text-align: left;
}
.tacker-title ~ .fifa-title:nth-of-type(1) {
	top: 0;
}
.fifa-title:nth-of-type(2) {
	top: 2ch;
}
/* ============================
	styling player display
 */

.main-player-display,
.no-player-add {
	background-color: var(--primary-color);
	border-radius: 100px;
	padding: 2em;
	color: var(--secondary-color);
}
.no-player-add ~ .main-player-display {
	display: none;
}
.player-display {
	max-height: 100vh;
	overflow-y: scroll;
	overflow-x: hidden;
	width: 100%;
	padding: 1em;
	scrollbar-width: thin;
	scrollbar-color: #64030586 transparent;
	position: relative;
}
.player-display::-webkit-scrollbar-track,
.player-display::-webkit-scrollbar {
	background-color: transparent;
}
.player-display::-webkit-scrollbar-thumb {
	background-color: #64030586;

	border-radius: 10vw;
}
.position-group {
	font-size: 3rem;
	margin-bottom: 1.5em;
}
.add-player-btn {
	padding: 0.5em;
	font-size: 1rem;
	font-weight: var(--comfortaa-bold);
	transition: all 300ms cubic-bezier(0.755, 0.05, 0.855, 0.06);
}
/* ======================		
		--styling create player form
	=========================*/
.create-form {
	display: none;
	grid-template-columns: repeat(6, 1fr);
	gap: 0.75em;
	width: 100%;
}
.create-form.show {
	display: grid;
}
.create-form.show ~ button {
	display: none;
}
.player-input-titles {
	display: grid;
	grid-template-columns: repeat(6, 1fr);
	grid-column: 1/-1;
}
.create-form h3::after {
	content: ":";
}
.create-form input {
	font-size: unset;
	border-radius: 10vw;
	padding: 0.25em;
}
.show-form-btn {
	text-decoration: none;
	padding: 0.5em;
	font-size: 1.2rem;
	margin-bottom: 1em;
	transition: all 300ms ease-in;
	float: right;
}
/* ... */

